src/objects/SSAE_16_Review__c.object
<CustomObject>
    <fields>
        <fullName>Bridge_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bridge Letter</label>
        <referenceTo>SSAE_16_Review__c</referenceTo>
        <relationshipLabel>SSAE-16 Reviews</relationshipLabel>
        <relationshipName>SSAE_16_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carve_out_s_of_sub_service_providers_fr__c</fullName>
        <label>Carve-out(s) of sub-service providers fr</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Service_Auditor_Report__c</fullName>
        <label>Date of Service Auditor Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Team_Response_to_Gap_Period__c</fullName>
        <label>Engagement Team Response to Gap Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Statement_Date__c</fullName>
        <label>Financial Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fraud_noncompliance_with_laws_and_regul__c</fullName>
        <label>Fraud, noncompliance with laws and regul</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gap_Period_End__c</fullName>
        <label>Gap Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gap_Period_Start__c</fullName>
        <label>Gap Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_qualified_engagement_team_response__c</fullName>
        <label>If &apos;qualified,&apos; engagement team response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Period_12_Months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Period &lt; 12 Months?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Period_End__c</fullName>
        <label>Report Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Period_Start__c</fullName>
        <label>Report Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Scope__c</fullName>
        <label>Report Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Title__c</fullName>
        <inlineHelpText>Complete Title of Report</inlineHelpText>
        <label>Report Title</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type II</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOC_I_II__c</fullName>
        <label>SOC I/II</label>
        <picklist>
            <picklistValues>
                <fullName>SOC I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOC II</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Auditor__c</fullName>
        <label>Service Auditor</label>
        <picklist>
            <picklistValues>
                <fullName>PricewaterhouseCoopers LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deloitte &amp; Touche LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ernst &amp; Young LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPMG LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Technology</label>
        <referenceTo>Technology__c</referenceTo>
        <relationshipLabel>SSAE-16 Reviews</relationshipLabel>
        <relationshipName>SSAE_16_Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_Auditor_Report__c</fullName>
        <label>Type of Service Auditor Report</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SSAE-16 Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SSAE-16 Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSAE-16 Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>